--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,9 +1,10 @@
 body {
-    background-color: #ffdfa4;
+    background-image: url("../images/witewall_3.png");
 }
 
-nav {
-    margin-bottom: 20px;
+.container{
+    background-color: #ffdfa4;
+    padding: 20px 10px 40px 10px;
 }
 
 .bg-primary {
